

                        Kiji Hive Adapter Release Notes

Version 0.6.0
  * KIJIHIVE-33. Fixed a ClassCastException issue when reading from a
      SpecificRecord.  Thanks Scott!

Version 0.5.0
  * KIJIHIVE-29. Updated KijiTableInputFormat to use Kiji interfaces for
      determining split information.
  * KIJIHIVE-20. Kiji Hive Adapter now supports writing of primitive types.
      Any tables that already exist in the Hive metastore need to be recreated
      in order to take advantage of the new classes.  See README.md for more
      details.

Version 0.4.1
  * KIJIHIVE-26. Default to HBaseRowKey when EntityId components aren't present.

Version 0.4.0
  * KIJIHIVE-23. Updates to Kiji Hive Adapter to become compatible with 
      KijiSchema 1.1.x.
      - Kiji Hive Adapter now uses Hive 0.11, which is included in CDH 4.2.1.
      - Refactored Kiji Hive Adapter to use Hadoop Writable objects internally
        for transferring data around within Hive, this eliminates the need to
        track the schema table for decoding of HBaseResults in evaluation.

Version 0.3.0
  * KIJIHIVE-19. Allow ability to read entity ids up through to Hive. 
      Thanks Jeff!
  * KIJIHIVE-18. Removed dead code that was causing NPEs while decoding
      nullable fields within complex types.

Version 0.2.0
  * KIJIHIVE-7. Add support for Avro unions.
  * KIJIHIVE-8. Fixed conversion issue for decoding complex Avro types.
  * KIJIHIVE-9. Fixed issue where only the most recent version of data was
      returned.
  * KIJIHIVE-10. Added in support for map type families.

Version 0.1.0
  * Initial Release
